syntax = "proto3";
option go_package = "cs.ubc.ca/cpsc416/onionRPC/guardNode";
package guardNode;

message PublicKey {
  bytes publicKey = 1;
}
message ReqEncrypted{
  bytes encrypted = 1;
  string sessionId = 2;
}
message ResEncrypted{
  bytes encrypted = 1;
}

service GuardNodeService {
  rpc ExchangePublicKey(PublicKey) returns (PublicKey) {}
  rpc ForwardRequest(ReqEncrypted) returns (ResEncrypted) {}
}
